@@ -5,8 +5,8 @@ Thanks to Andrew Conkling et al, for all their hard work on Pygmy!
 Sonata is a fork of the Pygmy project and licensed under the GPLv3.
 
 REQUIREMENTS:
-	(Required) PyGTK 2.6.0 or newer
-	(Required) GTK 2.6.0 or newer
+	(Required) PyGTK 2.12.0 or newer
+	(Required) GTK 2.12.0 or newer
 	(Required) python-mpd 0.2.0 or newer
 	(Required) Python 2.5 or python-elementtree
 	(Optional) MPD 0.12 or newer
